 Copyright (C) 2009, 2010, 2011, 2012, 2014, 2015 Mats Wahlberg

 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
 notice and this notice are preserved. This file is offered as-is,
 without any warranty.

TODO: more info in header!

RCX 0.8.0 "The Devil's Mind is an Idle Workshop" (?/?/2015)
---------------------------------------------------------------
TODO: more stuff here!
 * Change of name: "ReCaged" is now "RCX"

 * Move to Autotools (Automake, Autoconf) for building

 * Added simple script ("build.sh") for automating tedious builds (w32 for now)

 * Detect if running in "installed" or "portable" mode
   * Uses xdg or platform-specific paths when running in installed mode
   * Only uses local directories when running in portable mode
   * Automatic detection and paths can be overridden by invocation arguments

 * New set of invocation flags and arguments (includes long arguments)

 * NSIS installer for windows

 * Support for OS X

 * Fixed various insufficient memory allocations

 * Separate tyre and rim models replaced by single wheel models (by world/track)

 * New models and tracks:
   * New wheels, ramps and stunt objects by CodieMorgan/MoruganKodi/コディ[KODI]
   * Scramble-like test road by orgyia
   * superbowl and vertigo roads reworked to be much more pleasant to drive

 * New logging system:
   * Realtime log output now also on windows
   * Writes complete log output to log file
   * Errors written to stderr (and displayed in message box on windows)

 * Interface improvements:
   * Joystick (gamepad) support
   * Anti-Aliasing support (multisample)
   * More reliable window creation (native BPP, better fullscreen support)
   * Use native screen resolution for fullscreen mode
   * Better information output regarding window creation/resize

 * Simulation improvements:
   * Increased simulation stability